--- a/public/main.css
+++ b/public/main.css
@@ -10,6 +10,13 @@
   width: 70%;
   margin: auto;
   text-align: center;
+  margin: 0 auto;
+  margin-top: 200px;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 20px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.3);
 }
 
 .editor-form {
@@ -214,4 +221,37 @@
 
 #total-counter-number {
   color: blueviolet;
+}
+
+
+#container-statistic {
+  width: 100%;
+  height: 100vh;
+}
+#stat-block {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 200px;
+  font-size: 30px;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 20px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.3);
+}
+
+.back-button-stat-page {
+  color: red;
+  border: 1px solid rgb(198, 198, 198);
+  background: #f7f7f7 linear-gradient(#f7f7f7, #f1f1f1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 100px;
+  height: 40px;
+}
+.back-button-stat-page:hover {
+  color: black;
+  background-color: rgba(44, 36, 36, 0.658);
 }
